# tanglenomicon_compute_pure_vignette

./: CITATION  Justfile  requirements.txt
.github/workflows/: release.yml
.sops/: mongo.enc.yaml  mongo_dev.enc.yaml
docker/: config.yaml  docker-compose.yaml  mongo-init.js
docs/: README.md
docs/unit-descriptions/: config.md  entrypoint.md  producer.md  worker.md  wrapper.md
docs/use-cases/: compute_page.md  enqueue_job.md  load_job_queue.md  pageinate_collection.md  process_job.md  retrieve_page.md
libraries/: CMakeLists.txt
libraries/wrapper/: CMakeLists.txt  py_comp_rlitt.pyx
runner/: __main__.py  odm.py
runner/fproducer/: fproducer.py  test_fproducer.py
runner/fworker/: fworker.py
runner/lib_wrapper/: lib_wrapper.py
